--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,9 +12,15 @@ dependencies:
         sdk: flutter
     cupertino_icons: ^1.0.8
     sqflite_common_ffi: ^2.3.4+3
-    path_provider: ^2.1.5
+    path_provider: ^2.1.2
+    file_picker: ^8.1.2
     logging: ^1.3.0
     path: ^1.9.0
+    shared_preferences: ^2.3.3
+    flutter_riverpod: ^2.5.1
+    provider: ^6.1.2
+    flutter_file_dialog: ^3.0.2
+    flutter_smart_dialog: ^4.9.8+5
 
 dev_dependencies:
     flutter_test:
