--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
     provider: ^6.1.2
     flutter_file_dialog: ^3.0.2
     flutter_smart_dialog: ^4.9.8+5
+    fluttertoast: ^8.2.6
 
 dev_dependencies:
     flutter_test:
