--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
     path: ^1.9.0
     shared_preferences: ^2.3.3
     flutter_riverpod: ^2.5.1
+    riverpod_annotation: ^2.3.5
     provider: ^6.1.2
     flutter_gen_runner: ^5.4.0
     flutter_file_dialog: ^3.0.2
@@ -28,8 +29,12 @@ dev_dependencies:
     flutter_test:
         sdk: flutter
 
-    flutter_lints: ^4.0.0
+    flutter_lints: ^3.0.0
+    test: any
     build_runner: ^2.4.12
+    custom_lint: ^0.6.7
+    riverpod_generator: ^2.4.3
+    riverpod_lint: ^2.3.13
 
 flutter:
     uses-material-design: true
