--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
     flutter_file_dialog: ^3.0.2
     flutter_smart_dialog: ^4.9.8+5
     fluttertoast: ^8.2.6
+    shelf: ^1.4.1
+    flutter_inappwebview: ^6.1.0+1
 
 dev_dependencies:
     flutter_test:
