--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
     fluttertoast: ^8.2.6
     shelf: ^1.4.1
     flutter_inappwebview: ^6.1.0+1
+    flutter_reorderable_grid_view: ^5.4.0
+    icons_plus: ^5.0.0
 
 dev_dependencies:
     flutter_test:
