--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
     flutter_inappwebview: ^6.1.0+1
     flutter_reorderable_grid_view: ^5.4.0
     icons_plus: ^5.0.0
+    flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
     flutter_test:
